@@ -62,7 +62,7 @@ jobs:
         SYNERGY_VERSION_STAGE: ${{ steps.version.outputs.SYNERGY_VERSION_STAGE }}
       run: |
         sed -i "s/ synergy/ ${PACKAGE_NAME}/g" ./debian/control
-        python3 CI/deb_changelog.py "${PACKAGE_NAME}" "$(SYNERGY_DEB_VERSION)" unstable
+        python3 CI/deb_changelog.py "${PACKAGE_NAME}" "$(SYNERGY_DEB_VERSION)"
         debuild --preserve-envvar SYNERGY_* --preserve-envvar GIT_COMMIT -us -uc
         mkdir -p package
         cd ..
